[package]
name = "rust-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
#env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter", "time", "local-time", ] }
time = { version = "0.3.7", features = ["macros"] }
tracing-appender = "0.2.3"
